# openmp_exercise

./: .clang-format  01hello.cpp  02for.cpp  03section.cpp  04private.cpp  05mul_scalar.cpp  06_verify.cpp  06array_mul.cpp  CMakeLists.txt  matrix_product.cpp  merge_sort.cpp
bench/: CMakeLists.txt  bench_xxx.cpp  bench_yyy.cpp  bench_zzz.cpp
tests/: CMakeLists.txt  test_xxx.cpp
